force-app/main/default/objects/Opportunity/fields/AmountNoCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountNoCurrency__c</fullName>
    <description>Display amount without currency (multi-currency is not activated). The currency is the currency of the store</description>
    <formula>IF (
  ISBLANK(Amount),
  &apos;&apos;,
  TEXT(Amount) &amp; &quot; &quot; &amp; SPO_Store__r.Currency__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <type>Text</type>
</CustomField>