force-app/main/default/objects/Opportunity/fields/ApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSource__c</fullName>
    <description>Application where the opportunity is created : PERSO / SPO (Special Order) / ECO (ecommerce LV.com)</description>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPO</fullName>
            </value>
            <value>
                <fullName>PERSO</fullName>
            </value>
            <value>
                <fullName>ECO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>