force-app/main/default/objects/Opportunity/fields/B2C_Sourcing_Location__c.field-meta.xml
<CustomField>
    <fullName>B2C_Sourcing_Location__c</fullName>
    <description>This fiel is created to indicate the place where the order will be ship before the final ship to the store. It is populated automatically by OMS in the creation order process.</description>
    <label>Sourcing Location</label>
    <length>3</length>
    <type>Text</type>
</CustomField>