force-app/main/default/objects/Opportunity/fields/Checkdeposit__c.field-meta.xml
<CustomField>
    <fullName>Checkdeposit__c</fullName>
    <formula>SPO_Store__r.CheckXstoreDeposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkdeposit</label>
    <type>Checkbox</type>
</CustomField>