force-app/main/default/objects/Opportunity/fields/Client_Full_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Client_Full_Name_text__c</fullName>
    <label>Client Full Name (text)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>