force-app/main/default/objects/Opportunity/fields/Date_Cancel_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancel_Order__c</fullName>
    <formula>IF (
  NOT(ISBLANK(SPO_Date_Cancelled_by_store__c)),
  SPO_Date_Cancelled_by_store__c,
  SPO_Date_Cancelled_by_Production__c
)</formula>
    <label>Date Cancel Order</label>
    <type>Date</type>
</CustomField>