force-app/main/default/objects/Opportunity/fields/Date_Migrated_in_Xstore__c.field-meta.xml
<CustomField>
    <fullName>Date_Migrated_in_Xstore__c</fullName>
    <label>Date Migrated in Xstore</label>
    <type>Date</type>
</CustomField>