force-app/main/default/objects/Opportunity/fields/DepositReceived__c.field-meta.xml
<CustomField>
    <fullName>DepositReceived__c</fullName>
    <formula>(SPO_XstoreDeposit__c &gt;= SPO_DepositAmount__c)</formula>
    <label>DepositReceived</label>
    <type>Checkbox</type>
</CustomField>