force-app/main/default/objects/Opportunity/fields/displayUnitRetailPrice__c.field-meta.xml
<CustomField>
    <fullName>displayUnitRetailPrice__c</fullName>
    <formula>IF(hasQuotation__c,  SPO_UnitRetailPriceQuotation__c ,  SPO_UnitRetailPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>displayUnitRetailPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>