force-app/main/default/objects/Opportunity/fields/Duration_Quotation_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Duration_Quotation_in_progress__c</fullName>
    <formula>TODAY()- SPO_Date_Quotation_in_progress__c</formula>
    <label>Duration - Quotation in progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>