force-app/main/default/objects/Opportunity/fields/Duration_Quotation_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Duration_Quotation_Submitted__c</fullName>
    <formula>SPO_Date_Quotation_submitted__c -  SPO_Date_Quotation_in_progress__c</formula>
    <label>Duration Quotation Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>