force-app/main/default/objects/Opportunity/fields/ECO_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ECO_OrderNumber__c</fullName>
    <description>Order number from ATG (louisvuitton.com)</description>
    <externalId>true</externalId>
    <label>Order Number (LV.com)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>