force-app/main/default/objects/Opportunity/fields/Final_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Delivery_Date__c</fullName>
    <description>Last revised delivery date from related Firm Orders</description>
    <label>Final Delivery Date</label>
    <summarizedField>SPO_FirmOrder__c.TECH_Last_Delivery_Date__c</summarizedField>
    <summaryForeignKey>SPO_FirmOrder__c.SPO_BriefName__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>