force-app/main/default/objects/Opportunity/fields/FollowUpByClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>FollowUpByClientAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Perso app, get the user matching with Opportunity.FollowUpByClientAdvisorEmail__c. If the CA is connected to Salesforce, he can see directly his related orders.</description>
    <label>Follow-up by CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>