force-app/main/default/objects/Opportunity/fields/FollowUpByClientAdvisorEmail__c.field-meta.xml
<CustomField>
    <fullName>FollowUpByClientAdvisorEmail__c</fullName>
    <label>CA email (follow-up)</label>
    <type>Email</type>
</CustomField>