force-app/main/default/objects/Opportunity/fields/FollowUpByClientEmail__c.field-meta.xml
<CustomField>
    <fullName>FollowUpByClientEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Perso app, order follow-up by client email</description>
    <label>Follow-up by client email</label>
    <type>Checkbox</type>
</CustomField>