force-app/main/default/objects/Opportunity/fields/FollowUpByClientPhone__c.field-meta.xml
<CustomField>
    <fullName>FollowUpByClientPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order follow-up by client phone (if not a Display Order)</description>
    <label>Follow-up by client phone</label>
    <type>Checkbox</type>
</CustomField>