force-app/main/default/objects/Opportunity/fields/FollowUpByClientSMS__c.field-meta.xml
<CustomField>
    <fullName>FollowUpByClientSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order follow-up by SMS (if not a Display Order)</description>
    <label>Follow-up by client SMS</label>
    <type>Checkbox</type>
</CustomField>