force-app/main/default/objects/Opportunity/fields/hasQuotation__c.field-meta.xml
<CustomField>
    <fullName>hasQuotation__c</fullName>
    <description>Indicates whether or not the brief requires quotation (depends on the opportunity category and the order type)</description>
    <formula>OR(TEXT(SPO_ProductCategory__c)  &lt;&gt; &quot;Leather goods&quot;,  TEXT(SPO_OrderType__c)  &lt;&gt; &quot;MTO on Catalog (Hardsided)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasQuotation</label>
    <type>Checkbox</type>
</CustomField>