force-app/main/default/objects/Opportunity/fields/ICON_Comments__c.field-meta.xml
<CustomField>
    <fullName>ICON_Comments__c</fullName>
    <label>ICON Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>