force-app/main/default/objects/Opportunity/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interface - Client Creation Update</fullName>
                <default>true</default>
                <label>Interface - Client Creation Update</label>
            </value>
            <value>
                <fullName>Interface - Client Enquiry</fullName>
            </value>
            <value>
                <fullName>Interface - Client Search</fullName>
            </value>
            <value>
                <fullName>Interface - Control CA code</fullName>
            </value>
            <value>
                <fullName>Interface - Create Order</fullName>
            </value>
            <value>
                <fullName>Interface - Product Price</fullName>
            </value>
            <value>
                <fullName>Interface - Sales Creation (create deposit)</fullName>
            </value>
            <value>
                <fullName>Interface - Sales Creation (payment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>