force-app/main/default/objects/Opportunity/fields/Is_Dup__c.field-meta.xml
<CustomField>
    <fullName>Is_Dup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dup</label>
    <type>Checkbox</type>
</CustomField>