force-app/main/default/objects/Opportunity/fields/IsClosedByIcon__c.field-meta.xml
<CustomField>
    <fullName>IsClosedByIcon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosedByIcon</label>
    <type>Checkbox</type>
</CustomField>