force-app/main/default/objects/Opportunity/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <description>Checks whether the connected user&apos;s store and the order owner&apos;s store are the same</description>
    <formula>TEXT( $User.DefaultStore__c  )=  SPO_Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>