force-app/main/default/objects/Opportunity/fields/Order_Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Planned_Delivery_Date__c</fullName>
    <formula>CASE(MONTH(TECH_Order_Planned_Delivery_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;&quot;) +&quot; &quot; + 

TEXT( DAY(TECH_Order_Planned_Delivery_Date__c ))+&quot;,&quot;+&quot; &quot;+ 
TEXT(YEAR(TECH_Order_Planned_Delivery_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Delivery Date</label>
    <type>Text</type>
</CustomField>