force-app/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Value set when the opportunity is created:
=  &apos;P&apos; + 7 numbers (if application source = PERSO)
= &apos;SP&apos; + 7 numbers (if application source = SPO)
= To Be Defined for LV.com (number visible to client?)
Perso and SPO will have the same index (starts with 0300000). 
By Workflow, when the Opportyunity is created, set the value with P or SP (depending on application source) and concatenate with Opportunity.SPO_BriefCode__c (by sure to have 7 digits)</description>
    <label>Order Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>