force-app/main/default/objects/Opportunity/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product name string</description>
    <label>Product Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>