force-app/main/default/objects/Opportunity/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <description>Product sku string</description>
    <label>Product SKU</label>
    <length>250</length>
    <type>Text</type>
</CustomField>