force-app/main/default/objects/Opportunity/fields/Production_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>Production_Information_Text__c</fullName>
    <description>Text Field for Production Categorization in quotation popup</description>
    <inlineHelpText>Production info catégorisation</inlineHelpText>
    <label>Production Categorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>