force-app/main/default/objects/Opportunity/fields/Production_Owner__c.field-meta.xml
<CustomField>
    <fullName>Production_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maintains the last Production user that modified this order. Used as a point of contact, updated by process.</description>
    <label>Production Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SPO_Production</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_for_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>