force-app/main/default/objects/Opportunity/fields/Received_in_Store_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_in_Store_Date__c</fullName>
    <label>Received in Store Date</label>
    <type>Date</type>
</CustomField>