force-app/main/default/objects/Opportunity/fields/Reference_quotation_SKU__c.field-meta.xml
<CustomField>
    <fullName>Reference_quotation_SKU__c</fullName>
    <label>Reference quotation SKU</label>
    <length>250</length>
    <type>Text</type>
</CustomField>