force-app/main/default/objects/Opportunity/fields/Send_to_ERP__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check box used by process builder to update firm order substatus and ETL status</description>
    <label>Send to ERP</label>
    <type>Checkbox</type>
</CustomField>