force-app/main/default/objects/Opportunity/fields/Sent_to_RMS_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_RMS_Date__c</fullName>
    <label>Sent to RMS Date</label>
    <type>Date</type>
</CustomField>