force-app/main/default/objects/Opportunity/fields/SPO_AccountName__c.field-meta.xml
<CustomField>
    <fullName>SPO_AccountName__c</fullName>
    <formula>/* Account.Name is empty so workaround */
Account.FirstName &amp; &apos; &apos; &amp; Account.LastName</formula>
    <label>Account name</label>
    <type>Text</type>
</CustomField>