force-app/main/default/objects/Opportunity/fields/SPO_Activity2__c.field-meta.xml
<CustomField>
    <fullName>SPO_Activity2__c</fullName>
    <label>Activity2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LEATHER GOODS</fullName>
                <default>true</default>
                <label>LEATHER GOODS</label>
            </value>
            <value>
                <fullName>ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>WATCHES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>