force-app/main/default/objects/Opportunity/fields/SPO_Aestheticline__c.field-meta.xml
<CustomField>
    <fullName>SPO_Aestheticline__c</fullName>
    <label>Aesthetic line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_SubAestheticline__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANTHEIA</fullName>
            </value>
            <value>
                <fullName>ANTIGUA</fullName>
            </value>
            <value>
                <fullName>AUTRES CUIRS</fullName>
            </value>
            <value>
                <fullName>AUTRES HIGH END</fullName>
            </value>
            <value>
                <fullName>AUTRES TOILES</fullName>
            </value>
            <value>
                <fullName>BELLAIX</fullName>
            </value>
            <value>
                <fullName>CAPUCINES</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>CONSTELLATION</fullName>
            </value>
            <value>
                <fullName>CUIRS EXOTIQUES</fullName>
            </value>
            <value>
                <fullName>DAMIER</fullName>
            </value>
            <value>
                <fullName>EPI</fullName>
            </value>
            <value>
                <fullName>GRAIN CROISE</fullName>
            </value>
            <value>
                <fullName>GRANDS CUIRS</fullName>
            </value>
            <value>
                <fullName>HAUTE MAROQUINERIE</fullName>
            </value>
            <value>
                <fullName>LES EXTRAORDINAIRES</fullName>
            </value>
            <value>
                <fullName>LOCKME</fullName>
            </value>
            <value>
                <fullName>LOUIS VUITTON PARNASSEA</fullName>
            </value>
            <value>
                <fullName>LV CUP</fullName>
            </value>
            <value>
                <fullName>MAHINA</fullName>
            </value>
            <value>
                <fullName>MALLETAGE</fullName>
            </value>
            <value>
                <fullName>MONOGRAM</fullName>
            </value>
            <value>
                <fullName>MONOGRAM ECLIPSE</fullName>
            </value>
            <value>
                <fullName>NOMADE</fullName>
            </value>
            <value>
                <fullName>OMBRE</fullName>
            </value>
            <value>
                <fullName>OPERA</fullName>
            </value>
            <value>
                <fullName>SANS LIGNE ESTHETIQUE</fullName>
            </value>
            <value>
                <fullName>SUHALI</fullName>
            </value>
            <value>
                <fullName>SURYA</fullName>
            </value>
            <value>
                <fullName>TAIGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>