force-app/main/default/objects/Opportunity/fields/SPO_BaseSku__c.field-meta.xml
<CustomField>
    <fullName>SPO_BaseSku__c</fullName>
    <formula>SPO_BaseSKURefmodelSKU__r.SKUCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Sku</label>
    <type>Text</type>
</CustomField>