force-app/main/default/objects/Opportunity/fields/SPO_BaseSKURefmodelSKU__c.field-meta.xml
<CustomField>
    <fullName>SPO_BaseSKURefmodelSKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Base SKU (Ref. model SKU)</label>
    <referenceTo>ProductReferential__c</referenceTo>
    <relationshipLabel>Brief</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>