force-app/main/default/objects/Opportunity/fields/SPO_BeltSize__c.field-meta.xml
<CustomField>
    <fullName>SPO_BeltSize__c</fullName>
    <label>Belt size (cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>