force-app/main/default/objects/Opportunity/fields/SPO_BriefCode__c.field-meta.xml
<CustomField>
    <fullName>SPO_BriefCode__c</fullName>
    <displayFormat>SP{000000}</displayFormat>
    <label>Brief code</label>
    <type>AutoNumber</type>
</CustomField>