force-app/main/default/objects/Opportunity/fields/SPO_CACode__c.field-meta.xml
<CustomField>
    <fullName>SPO_CACode__c</fullName>
    <label>CA code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>