force-app/main/default/objects/Opportunity/fields/SPO_ClientAccessoriesRequested__c.field-meta.xml
<CustomField>
    <fullName>SPO_ClientAccessoriesRequested__c</fullName>
    <label>Item to be packed sent to Asnières</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>