force-app/main/default/objects/Opportunity/fields/SPO_ClientCompleteName__c.field-meta.xml
<CustomField>
    <fullName>SPO_ClientCompleteName__c</fullName>
    <formula>Account.PersonContact.FirstName +  &quot; &quot; + Account.PersonContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client name</label>
    <type>Text</type>
</CustomField>