force-app/main/default/objects/Opportunity/fields/SPO_ColorMetalicparts__c.field-meta.xml
<CustomField>
    <fullName>SPO_ColorMetalicparts__c</fullName>
    <label>Color metalic parts</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_ProductCategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Other (free text)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>