force-app/main/default/objects/Opportunity/fields/SPO_ColorMetalicPartsLocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_ColorMetalicPartsLocalComment__c</fullName>
    <label>Color metalic parts local comment</label>
    <type>TextArea</type>
</CustomField>