force-app/main/default/objects/Opportunity/fields/SPO_ColorMetalicPartsZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_ColorMetalicPartsZoneApproverComment__c</fullName>
    <label>Color metalic parts zone appr. comment</label>
    <type>TextArea</type>
</CustomField>