force-app/main/default/objects/Opportunity/fields/SPO_CommentClientAccessories__c.field-meta.xml
<CustomField>
    <fullName>SPO_CommentClientAccessories__c</fullName>
    <label>Comment client accessories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>