force-app/main/default/objects/Opportunity/fields/SPO_CommercialLocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_CommercialLocalComment__c</fullName>
    <label>Special Order description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>