force-app/main/default/objects/Opportunity/fields/SPO_CommercialZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_CommercialZoneApproverComment__c</fullName>
    <label>Internal zone approver comment</label>
    <type>TextArea</type>
</CustomField>