force-app/main/default/objects/Opportunity/fields/SPO_ConcatenateTitle__c.field-meta.xml
<CustomField>
    <fullName>SPO_ConcatenateTitle__c</fullName>
    <formula>Name + &quot; &quot; +&quot;(&quot;+ SPO_BriefCode__c +&quot;)&quot; + &quot; - &quot; + SPO_Store__r.Name + &quot; &quot; + &quot;(&quot;+SPO_Store__r.RetailStoreId__c+&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenate title</label>
    <type>Text</type>
</CustomField>