force-app/main/default/objects/Opportunity/fields/SPO_CreationType__c.field-meta.xml
<CustomField>
    <fullName>SPO_CreationType__c</fullName>
    <label>Hardsided or Soft ?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_ProductCategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hardsided</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>