force-app/main/default/objects/Opportunity/fields/SPO_CRS__c.field-meta.xml
<CustomField>
    <fullName>SPO_CRS__c</fullName>
    <label>CRS (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>