force-app/main/default/objects/Opportunity/fields/SPO_CRSCurrencyInclude__c.field-meta.xml
<CustomField>
    <fullName>SPO_CRSCurrencyInclude__c</fullName>
    <formula>TEXT (SPO_CRS__c) + &quot; EUR&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRS (currency include)</label>
    <type>Text</type>
</CustomField>