force-app/main/default/objects/Opportunity/fields/SPO_Date_Cancelled_by_Production__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Cancelled_by_Production__c</fullName>
    <label>Date Cancelled by Production</label>
    <type>Date</type>
</CustomField>