force-app/main/default/objects/Opportunity/fields/SPO_Date_Cancelled_by_store__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Cancelled_by_store__c</fullName>
    <label>Date Cancelled by store</label>
    <type>Date</type>
</CustomField>