force-app/main/default/objects/Opportunity/fields/SPO_Date_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Closed_Won__c</fullName>
    <label>Date Closed Won</label>
    <type>Date</type>
</CustomField>