force-app/main/default/objects/Opportunity/fields/SPO_Date_Creation_in_progress__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Creation_in_progress__c</fullName>
    <label>Date Creation in progress</label>
    <type>Date</type>
</CustomField>