force-app/main/default/objects/Opportunity/fields/SPO_Date_Distribution_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Distribution_in_Progress__c</fullName>
    <label>Date Distribution in Progress</label>
    <type>Date</type>
</CustomField>