force-app/main/default/objects/Opportunity/fields/SPO_Date_Payment_confirmed__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Payment_confirmed__c</fullName>
    <label>Date Payment confirmed</label>
    <type>Date</type>
</CustomField>