force-app/main/default/objects/Opportunity/fields/SPO_Date_Quotation_accepted__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Quotation_accepted__c</fullName>
    <label>Date Quotation accepted</label>
    <type>Date</type>
</CustomField>