force-app/main/default/objects/Opportunity/fields/SPO_Date_Quotation_rejected__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Quotation_rejected__c</fullName>
    <label>Date Quotation rejected</label>
    <type>Date</type>
</CustomField>