force-app/main/default/objects/Opportunity/fields/SPO_Date_Quotation_submitted__c.field-meta.xml
<CustomField>
    <fullName>SPO_Date_Quotation_submitted__c</fullName>
    <label>Date Quotation submitted</label>
    <type>Date</type>
</CustomField>