force-app/main/default/objects/Opportunity/fields/SPO_DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>SPO_DeliveryAddress__c</fullName>
    <formula>SPO_Store__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery address</label>
    <type>Text</type>
</CustomField>