force-app/main/default/objects/Opportunity/fields/SPO_DeliveryAddressComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_DeliveryAddressComment__c</fullName>
    <label>Delivery address comment</label>
    <type>TextArea</type>
</CustomField>