force-app/main/default/objects/Opportunity/fields/SPO_Department__c.field-meta.xml
<CustomField>
    <fullName>SPO_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARTS OF TRAVEL</fullName>
            </value>
            <value>
                <fullName>GRANDS CUIRS</fullName>
            </value>
            <value>
                <fullName>MEN CITY BAGS &amp; BUSINESS</fullName>
            </value>
            <value>
                <fullName>WATCHES</fullName>
            </value>
            <value>
                <fullName>BELTS</fullName>
            </value>
            <value>
                <fullName>EYEWEAR</fullName>
            </value>
            <value>
                <fullName>FANCY ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>FASHION JEWELRY</fullName>
            </value>
            <value>
                <fullName>LEATHER BRACELETS</fullName>
            </value>
            <value>
                <fullName>TEXTILES</fullName>
            </value>
            <value>
                <fullName>TIES</fullName>
            </value>
            <value>
                <fullName>VARIOUS ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>UNIQUE PIECES</fullName>
                <default>true</default>
                <label>UNIQUE PIECES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>