force-app/main/default/objects/Opportunity/fields/SPO_DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositAmount__c</fullName>
    <label>Deposit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>