force-app/main/default/objects/Opportunity/fields/SPO_DepositAmountCurrencyInclude__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositAmountCurrencyInclude__c</fullName>
    <formula>TEXT ( SPO_DepositAmount__c ) + &quot; &quot; + SPO_Store__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit amount (currency include)</label>
    <type>Text</type>
</CustomField>