force-app/main/default/objects/Opportunity/fields/SPO_DepositComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositComment__c</fullName>
    <label>Deposit comment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>