force-app/main/default/objects/Opportunity/fields/SPO_DepositCommentZoneApprover__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositCommentZoneApprover__c</fullName>
    <label>Zone approver deposit Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>