force-app/main/default/objects/Opportunity/fields/SPO_DepositNumber__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositNumber__c</fullName>
    <label>Deposit number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>