force-app/main/default/objects/Opportunity/fields/SPO_DepositSentStatusDate__c.field-meta.xml
<CustomField>
    <fullName>SPO_DepositSentStatusDate__c</fullName>
    <label>Deposit sent status date</label>
    <type>Date</type>
</CustomField>