force-app/main/default/objects/Opportunity/fields/SPO_Description__c.field-meta.xml
<CustomField>
    <fullName>SPO_Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>