force-app/main/default/objects/Opportunity/fields/SPO_DestinationWatch__c.field-meta.xml
<CustomField>
    <fullName>SPO_DestinationWatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Watch</label>
    <referenceTo>ProductReferential__c</referenceTo>
    <relationshipLabel>Opportunities (Destination Watch)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>